<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddShoppingItemFragment"
    android:orientation="vertical"
    android:padding="25dp"
    android:id="@+id/add_shopping_fragment_linear_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/new_item_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name"
                android:inputType="text"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/new_item_price_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:textAlignment="textStart" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buyer_colon"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/users_spinner_buyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/divie_into"
                android:textAlignment="center" />

            <ListView
                android:id="@+id/users_checkboxes_list_view"
                android:layout_width="match_parent"
                android:layout_height="169dp" />

            <Button
                android:id="@+id/pick_date_button"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:background="@color/colorAccent"
                android:text="@string/pick_date" />
        </LinearLayout>

    </LinearLayout>


    <DatePicker
        android:id="@+id/shopping_date_picker"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:textAlignment="center"
        android:visibility="invisible">

    </DatePicker>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="43dp">

        <Button
            android:id="@+id/save_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:background="@color/colorAccent"
            android:text="@string/save" />
    </FrameLayout>



</LinearLayout>