<resources>
    <string name="app_name">Flatmate</string>
    <string name="action_settings">Settings</string>
    <string name="chat">Chat</string>
    <string name="rent">Rent</string>
    <string name="duties">Duties</string>
    <string name="shopping">Shopping</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password_confirm">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="rent_value_pln">%1$.2f PLN</string>
    <string name="rent_value_each">Your part: %1$.2f PLN</string>
    <string name="write_a_message">Write a message…</string>
    <string name="actual_balance">Actual balance</string>
    <string name="recent_shopping_items">Recent history</string>
    <string name="price">Price</string>
    <string name="item_name">Item name</string>
    <string name="buyer">Buyer</string>
    <string name="value">Value</string>
    <string name="duties_todo">To do</string>
    <string name="duties_history">History</string>
    <string name="duty_name">Duty</string>
    <string name="duty_value">Value</string>
    <string name="duty_date">Date</string>
    <string name="statistics">Statistics</string>
    <string name="channel_name_rent">Rent Channel</string>
    <string name="channel_rent_description">Notifications about rent</string>
    <string name="channel_id_rent">RentChannel</string>
    <string name="channel_id_chat">ChatChannel</string>
    <string name="login">Login</string>
    <string name="divie_into">Divie into:</string>
    <string name="pick_date">Pick date</string>
    <string name="save">save</string>
    <string name="me">Ja</string>
    <string name="logout">Logout</string>
    <string name="add_purchase">Add purhcase</string>
    <string name="pay_debt">Pay debt</string>
    <string name="to_whom">To whom?</string>
    <string name="how_much">How much?</string>
    <string name="pln">PLN</string>
    <string name="see_stats">See stats</string>
    <string name="add_duty">Add duty</string>
    <string name="channel_name_chat">Chat</string>
    <string name="channel_chat_description">Notify about new message</string>
    <string name="no_flat">You haven\'t got a flat yet</string>
    <string name="create_flat">Create</string>
    <string name="welcome">Welcome to Flatmate! Please enter your flat name to start a great adventure!</string>
    <string name="flat_name">Flat name</string>
    <string name="join_flat">Join</string>
    <string name="flat_code">Flat invitation code</string>
    <string name="join">Join flat</string>
    <string name="empty_login">Field Login cannot be empty!</string>
    <string name="empty_password">Field Password cannot be empty!</string>
    <string name="empty_email">Field Email cannot be empty!</string>
    <string name="empty_name">Field Name cannot be empty!</string>
    <string name="different_passwords">Passwords cannot be different!</string>
    <string name="too_short_password">Password too short!</string>
    <string name="singup_correct">Success.</string>
    <string name="singup_faild">Failure.</string>
    <string name="login_in_use">Login already in use</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="buyer_colon">Buyer:</string>
    <string name="no_internet_error">No internet connection</string>
    <string name="message_sending_error">Failed to send the message</string>
    <string name="empty_message_sending_error">You cannot send an empty message</string>
    <string name="bad_login_or_password">Wrong login or password</string>
    <string name="rent_value_cannot_be_null">Rent value cannot be null</string>
    <string name="success">Success</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="your_invitation_code">Your invitation code:</string>
    <string name="share_code">Share code</string>
    <string name="invite_friends">Invite friends</string>
    <string name="add_rent">Add rent</string>
    <string name="extras">Extras</string>
    <string name="empty_price">Item price cannot be empty</string>
    <string name="empty_item_name">Item name cannot be empty</string>
    <string name="back">Back</string>
    <string name="manage_flat">Manage flat</string>
    <string name="someone_has_empty_field">Someone has empty field</string>

</resources>
