<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ListView
        android:id="@+id/rentHistoryListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_rent_add"/>

    <Button
        android:id="@+id/button_rent_add"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorButtons"
        android:text="@string/add_rent" />

</RelativeLayout>